--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,30 +8,162 @@
   <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
   <div class="page">
     <header class="header">
       <img src="./images/logo_place_header.svg" alt="Логотип Практикума" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать →</a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
+        жизни? <a href="#" class="header__link">Узнать →</a></p>
       <img src="./images/header-image.png" alt="Опять двойка" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
+
     <main class="content">
-      <section class="description">
+      <section class="description section_top-padding_100px">
+        <div class="two-columns">
+          <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше
+              сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит
+              пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно
+              уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+              сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+            </p>
+          </div>
+        </div>
       </section>
 
-      <section class="digits">
+      <section class="digits section_top-padding_100px section_bottom-padding_100px">
+        <h2 class="section-title section-title_bottom-margin_20px">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <div class="table">
+          <div class="table__cell table__cell_theme_white">
+            <h5 class="table__heading">86 миллиардов</h5>
+            <p class="table__text table__text_theme_white">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <h5 class="table__heading">2.1 миллиарда</h5>
+            <p class="table__text table__text_theme_white">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__text_theme_white">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <h5 class="table__heading">1000 терабайт</h5>
+            <p class="table__text table__text_theme_white">Объём памяти человека</p>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <h5 class="table__heading">500 триллионов</h5>
+            <p class="table__text table__text_theme_white">Число ответственных за обучение нервных синапсов у
+              взрослого человека</p>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <h5 class="table__heading">420 миллионов</h5>
+            <p class="table__text table__text_theme_white">Число взрослых людей моложе 25 лет, не имеющих образования
+              для трудоустройства</p>
+            <p class="table__text table__text_theme_white">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <h5 class="table__heading">17–20 лет</h5>
+            <p class="table__text table__text_theme_white">Пик обучаемости</p>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <h5 class="table__heading">1885 год</h5>
+            <p class="table__text table__text_theme_white">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <h5 class="table__heading">1889 год</h5>
+            <p class="table__text table__text_theme_white">Открытие условного рефлекса</p>
+          </div>
+        </div>
       </section>
 
-      <section class="feynman">
+      <section class="feynman section_top-padding_90px">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a href="#" class="feynman__link">Подробнее →</a>
       </section>
 
-      <section class="kaufman">
+      <section class="kaufman section_top-padding_90px section_bottom-padding_90px">
+        <h2 class="section-title section-title_bottom-margin_20px section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <div class="table table_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">1</h5>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">2</h5>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">3</h5>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">4</h5>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">5</h5>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">6</h5>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">7</h5>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">8</h5>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">9</h5>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными
+              интервалами.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h5 class="table__heading table__heading_theme_dark">10</h5>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
+        <img src="./images/kaufman-triangle.svg" alt="Треугольник по Кауфману" class="kaufman__triangle">
       </section>
     </main>
-    <footer class="footer">
 
+    <footer class="footer section_top-padding_60px section_bottom-padding_40px">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <img src="./images/logo_place_footer.svg" alt="Логотип Практикума" class="logo logo_place_footer">
+          <p class="footer__author">&copy; 2021. Арбузов Никита</p>
+        </div>
+        <div class="footer__column_content_info">
+          <h6 class="footer__column-heading">О Практикуме</h6>
+          <div class="footer__column-links footer__column-links_top-margin_20px">
+            <a href="#" class="footer__column__link">Главная</a>
+            <a href="#" class="footer__column__link">Концепция</a>
+            <a href="#" class="footer__column__link">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column_content_social">
+          <h6 class="footer__column-heading">Соцсети</h6>
+          <div class="footer__column-links footer__column-links_top-margin_20px">
+            <a href="#" class="footer__column__link"><img src="./images/facebook_color_white.svg" alt="Facebook"
+                class="footer__social_icon">
+              Facebook</a>
+            <a href="#" class="footer__column__link"><img src="./images/vk_color_white.svg" alt="ВКонтакте"
+                class="footer__social_icon">ВКонтакте</a>
+            <a href="#" class="footer__column__link"><img src="./images/instagram_color_white.svg" alt="Instagram"
+                class="footer__social_icon">Instagram</a>
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
