--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 
@@ -21,9 +21,9 @@
     </header>
 
     <main class="content">
-      <section class="description section_top-padding_100px">
+      <section class="description">
         <div class="two-columns">
-          <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
               материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше
@@ -38,131 +38,132 @@
         </div>
       </section>
 
-      <section class="digits section_top-padding_100px section_bottom-padding_100px">
-        <h2 class="section-title section-title_bottom-margin_20px">Цифры и факты</h2>
-        <h3 class="section-subtitle">Про учёбу и мозг</h3>
-        <div class="table">
-          <div class="table__cell table__cell_theme_white">
-            <h5 class="table__heading">86 миллиардов</h5>
-            <p class="table__text table__text_theme_white">Число нейронов в мозге человека</p>
-          </div>
-          <div class="table__cell table__cell_theme_white">
-            <h5 class="table__heading">2.1 миллиарда</h5>
-            <p class="table__text table__text_theme_white">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text table__text_theme_white">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell table__cell_theme_white">
-            <h5 class="table__heading">1000 терабайт</h5>
-            <p class="table__text table__text_theme_white">Объём памяти человека</p>
-          </div>
-          <div class="table__cell table__cell_theme_white">
-            <h5 class="table__heading">500 триллионов</h5>
-            <p class="table__text table__text_theme_white">Число ответственных за обучение нервных синапсов у
+      <section class="digits">
+        <h2 class="section-title digits__section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table">
+          <li class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у
               взрослого человека</p>
-          </div>
-          <div class="table__cell table__cell_theme_white">
-            <h5 class="table__heading">420 миллионов</h5>
-            <p class="table__text table__text_theme_white">Число взрослых людей моложе 25 лет, не имеющих образования
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования
               для трудоустройства</p>
-            <p class="table__text table__text_theme_white">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell table__cell_theme_white">
-            <h5 class="table__heading">17–20 лет</h5>
-            <p class="table__text table__text_theme_white">Пик обучаемости</p>
-          </div>
-          <div class="table__cell table__cell_theme_white">
-            <h5 class="table__heading">1885 год</h5>
-            <p class="table__text table__text_theme_white">Открытие кривой забывания</p>
-          </div>
-          <div class="table__cell table__cell_theme_white">
-            <h5 class="table__heading">1889 год</h5>
-            <p class="table__text table__text_theme_white">Открытие условного рефлекса</p>
-          </div>
-        </div>
+              <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
 
-      <section class="feynman section_top-padding_90px">
+      <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее →</a>
       </section>
 
-      <section class="kaufman section_top-padding_90px section_bottom-padding_90px">
-        <h2 class="section-title section-title_bottom-margin_20px section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-        <div class="table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">1</h5>
-            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">2</h5>
-            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">3</h5>
-            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">4</h5>
-            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">5</h5>
-            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">6</h5>
-            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">7</h5>
-            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">8</h5>
-            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">9</h5>
-            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными
+      <section class="kaufman">
+        <h2 class="section-title kaufman__section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">1</h3>
+            <p class="table__text">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">2</h3>
+            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">3</h3>
+            <p class="table__text">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">4</h3>
+            <p class="table__text">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">5</h3>
+            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">6</h3>
+            <p class="table__text">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">7</h3>
+            <p class="table__text">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">8</h3>
+            <p class="table__text">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">9</h3>
+            <p class="table__text">Занимайтесь по расписанию, короткими интенсивными
               интервалами.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h5 class="table__heading table__heading_theme_dark">10</h5>
-            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-          </div>
-        </div>
-        <img src="./images/kaufman-triangle.svg" alt="Треугольник по Кауфману" class="kaufman__triangle">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">10</h3>
+            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
 
-    <footer class="footer section_top-padding_60px section_bottom-padding_40px">
+    <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" alt="Логотип Практикума" class="logo logo_place_footer">
           <p class="footer__author">&copy; 2021. Арбузов Никита</p>
         </div>
-        <div class="footer__column_content_info">
-          <h6 class="footer__column-heading">О Практикуме</h6>
-          <div class="footer__column-links footer__column-links_top-margin_20px">
-            <a href="#" class="footer__column__link">Главная</a>
-            <a href="#" class="footer__column__link">Концепция</a>
-            <a href="#" class="footer__column__link">Наставники</a>
-          </div>
-        </div>
-        <div class="footer__column_content_social">
-          <h6 class="footer__column-heading">Соцсети</h6>
-          <div class="footer__column-links footer__column-links_top-margin_20px">
-            <a href="#" class="footer__column__link"><img src="./images/facebook_color_white.svg" alt="Facebook"
-                class="footer__social_icon">
-              Facebook</a>
-            <a href="#" class="footer__column__link"><img src="./images/vk_color_white.svg" alt="ВКонтакте"
-                class="footer__social_icon">ВКонтакте</a>
-            <a href="#" class="footer__column__link"><img src="./images/instagram_color_white.svg" alt="Instagram"
-                class="footer__social_icon">Instagram</a>
-          </div>
-        </div>
+        <nav class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link">Главная</a></li>
+            <li><a href="#" class="footer__column-link">Концепция</a></li>
+            <li><a href="#" class="footer__column-link">Наставники</a></li>
+          </ul>
+        </nav>
+        <nav class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook"
+                class="footer__social-icon">
+              Facebook</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте"
+                class="footer__social-icon">ВКонтакте</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Instagram"
+                class="footer__social-icon">Instagram</a></li>
+          </ul>
+        </nav>
       </div>
     </footer>
   </div>
