--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a href="#" class="header__link">Узнать →</a></p>
-      <img src="./images/header-image.png" alt="Опять двойка" class="header__main-illustration">
+      <div class="header__main-illustration"></div>
       <div class="header__square-pic"></div>
     </header>
 
@@ -156,8 +156,7 @@
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook"
-                class="footer__social-icon">
-              Facebook</a></li>
+                class="footer__social-icon">Facebook</a></li>
             <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте"
                 class="footer__social-icon">ВКонтакте</a></li>
             <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Instagram"
