--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./index.css">
 </head>
 
@@ -22,6 +21,23 @@
 
     <main class="content">
 
+      <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше
+              сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит
+              пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно
+              уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+              сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+            </p>
+          </div>
+        </div>
+      </section>
+
       <section class="techniques">
         <h2 class="section-title techniques__section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
@@ -32,7 +48,7 @@
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
-            <img src="./images/cards-recall.png" alt="Recall" class="cards__image">
+            <img src="./images/cards-recall.png" alt="Вспоминайте" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
@@ -54,22 +70,28 @@
         </ul>
       </section>
 
+      <section class="video">
+        <h2 class="section-title video__section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/embed/5MgBikgcWnY" class="video__iframe"></iframe>
+        </div>
+      </section>
 
-      <section class="description">
+      <section class="oakley">
         <div class="two-columns">
-          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
-              материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше
-              сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит
-              пользы.</p>
-            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно
-              уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-columns__paragraph two-columns__paragraph_last">Конкретные техники и упражнения помогают изменить подход к обучению,
-              сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
-            </p>
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
         </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее →</a>
       </section>
 
       <section class="digits">
@@ -115,16 +137,23 @@
         </ul>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее →</a>
+            <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <div class="khan__book-pic"></div>
+            <a href="#" class="khan__buy-link">Купить книгу →</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
         <h2 class="section-title kaufman__section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">1</h3>
@@ -170,6 +199,17 @@
         </ul>
         <div class="kaufman__triangle kaufman__rotation"></div>
       </section>
+
+      <section class="resources">
+        <h2 class="section-title resources__section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li class="resources__logo"><img src="./images/logo/resources-arzamas.svg" alt="Арзамас"></li>
+          <li class="resources__logo"><img src="./images/logo/resources-n1.svg" alt="N+1"></li>
+          <li class="resources__logo"><img src="./images/logo/resources-strelka.svg" alt="Стрелка"></li>
+          <li class="resources__logo"><img src="./images/logo/resources-polka.svg" alt="Полка"></li>
+        </ul>
+      </section>
     </main>
 
     <footer class="footer">
@@ -189,11 +229,11 @@
         <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook"
+            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук"
                 class="footer__social-icon">Facebook</a></li>
             <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте"
                 class="footer__social-icon">ВКонтакте</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Instagram"
+            <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Инстаграм"
                 class="footer__social-icon">Instagram</a></li>
           </ul>
         </nav>
