--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a href="#" class="header__link">Узнать&nbsp;&#8594;</a></p>
       <img src="./images/header-image.png" alt="Опять двойка" class="header__main-illustration">
-      <div class="header__square-pic rotation__360-clockwise"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -205,7 +205,7 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle rotation__360-clockwise"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
 
       <section class="resources">
